conformance/tests/snapshots/coloured_help__laid_flat_long.snap
---
source: conformance/tests/coloured_help.rs
expression: "page(LAID, &[\"flatp\"], true)"
---
␛[1mTop␛[0m
Flat

␛[1;33mUsage:␛[0m laid flatp
       laid flatp x [␛[1;32m--xx␛[0m]

␛[1;33mFlags:␛[0m
  ␛[1;32m-h␛[0m, ␛[1;32m--help␛[0m   Print help

␛[1;33mGlobal flags:␛[0m
      ␛[1;32m--force␛[0m  Force ␛[3mit␛[23m

␛[1;33mflatp x:␛[0m
X
      ␛[1;32m--xx␛[0m

␛[1;33mEnd␛[0m
